Corrected descriptions in test filter string resources

--- a/uberoagfilters/src/main/resources/com/uberether/oow/oag/filters/test/resources.properties
+++ b/uberoagfilters/src/main/resources/com/uberether/oow/oag/filters/test/resources.properties
@@ -1,7 +1,7 @@
 UE_OOW_2013_GROUP=UberEther OOW 2013 Filters
 
-UTF_PAGE_TITLE=Simple Filter Configuration
-UTF_PAGE_DESCRIPTION=Configure parameter values for the Simple Filter
+UTF_PAGE_TITLE=UberEther Test Filter
+UTF_PAGE_DESCRIPTION=Configure parameter values for the UberEther Test Filter
 
 UTF_NAME=Filter Name:
-UTF_NAME_DESC=The name of the Simple Filter
+UTF_NAME_DESC=The name of the Test Filter
