--- a/uberoagtokenadmin/pom.xml
+++ b/uberoagtokenadmin/pom.xml
@@ -3,11 +3,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.uberether</groupId>
-    <artifactId>UberXkcd</artifactId>
+    <artifactId>UberOagTokenAdmin</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>UberXkcd</name>
+    <name>Uber OAG Token Admin</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -33,7 +33,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>com.uberether.oow.uberxkcd.UberXkcdService</mainClass>
+                            <mainClass>com.uberether.oow.oag.filteradmin.UberOagFilterAdmin</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
@@ -80,6 +80,12 @@
             <artifactId>cxf-rt-frontend-jaxrs</artifactId>
             <version>2.7.6</version>
         </dependency>
+        <!-- MySQL JDBC Driver -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.26</version>
+        </dependency>        
         <dependency>
             <!-- Jackson for JSON parsing -->
             <groupId>org.codehaus.jackson</groupId>
